# realworld-django

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  manage.py  pyproject.toml
realworld/: asgi.py  settings.py  wsgi.py
