[tool.black]
line-length = 79
target-version = ["py311"]

[tool.isort]
multi_line_output = 3
profile = "black"
py_version = 311

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "3.11.*"
django = "5.1.*"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.1.*"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
